--- a/resources/css/abstracts/_variables.scss
+++ b/resources/css/abstracts/_variables.scss
@@ -8,7 +8,7 @@ $greyRed: #3F3543; //use
 $greyBlue: #3E3F68; //use
 $greyBlue-Light: #78849E; //use
 $greyLight: #707070; //use
-
+$grey: #3F3543; //use | text
 $whiteCustom: #FAF8F8;
 
 //Variables tailles
@@ -19,7 +19,7 @@ $useful-width: map-get($breakpoints, "XL"); //use
 
 //Variables stores list
 $store-list-height: 350px;
-$element-list-height: 80px;
+$element-list-height: 90px;
 $img-element-list-height: 65px;
 
 $listStores-element-img: 200px;
