--- a/resources/css/pages/_home.scss
+++ b/resources/css/pages/_home.scss
@@ -199,16 +199,14 @@
         display: flex;
         background: transparent;
         bottom: 20px;
-
-        flex-wrap: nowrap;
         overflow-x: auto;
-
         align-items: flex-end;
+        width: 100%;
         .element-list {
             display: flex;
             flex-direction: column;
-            max-width: 140px;
-
+            min-width: 140px;
+            width: 140px;
             margin-right: 15px;
             .img-element-list {
                 width: 100%;
@@ -368,7 +366,7 @@
                     p{
                         $res: $element-list-height - $img-element-list-height;
                         margin: $res / 2 $res / 2 $res / 2 40% ;
-                        color: $greyBlue-Light;
+                        color: $grey;
                         font-weight: $bold;
                         font-size: 13px;
                     }
@@ -378,7 +376,7 @@
                         .description-veryshort{
                             display:block;
                             font-size: 12px;
-                            color: $greyBlue-Light;
+                            color: $grey;
                             font-weight: $ligth;
                             line-height: 11px;
                             padding-bottom: 5px;
@@ -387,7 +385,9 @@
                         .note{
                            display:flex;
                            justify-content: flex-end;
-                           color: $greyBlue-Light;
+                           color: $yellowSecondary;
+                           font-weight: bold;
+                           
                            span:nth-child(2){
                                width: auto;
                            }
